Rebrand to Punjabi Beats: Add girly pink theme, logo, and update branding
- Rename project from Spotify Clone to Punjabi Beats
- Update author to Samreet
- Add girly pink theme throughout the app (replacing slate/gray colors)
- Add Punjabi Beats logo as favicon and home screen
- Update all documentation and metadata with new branding

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "spotify-clone",
+  "name": "punjabi-beats",
   "version": "0.1.0",
   "private": true,
+  "author": "Samreet",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
